2024-04-19T16:13:50Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8756546084 # 197
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-19
* notice: last 14d: unq all: 3 1892
* notice: prev accum: outdated-unq outdated-all / unq all: 1998 198727 / 2020 200563
* notice: next accum: outdated-unq outdated-all / unq all: 1998 198727 / 2020 200656
* notice: prev exec diff / last date diff / accum: unq all: +0 +93 -0 -18 / +1 +203 -0 -0 / 1 203
* notice: removed / changed dates: [] / [2024-04-05 2024-04-19]

2024-04-19T08:14:51Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8750513191 # 196
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-19
* notice: last 14d: unq all: 3 1817
* notice: prev accum: outdated-unq outdated-all / unq all: 1998 198727 / 2019 200451
* notice: next accum: outdated-unq outdated-all / unq all: 1998 198727 / 2020 200563
* notice: prev exec diff / last date diff / accum: unq all: +1 +112 -0 -18 / +1 +110 -0 -0 / 1 110
* notice: removed / changed dates: [] / [2024-04-05 2024-04-18 2024-04-19]

2024-04-19T00:52:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8746720682 # 195
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-19
* notice: last 14d: unq all: 3 1723
* notice: prev accum: outdated-unq outdated-all / unq all: 1997 198677 / 2019 200361
* notice: next accum: outdated-unq outdated-all / unq all: 1998 198727 / 2019 200451
* notice: prev exec diff / last date diff / accum: unq all: +0 +90 -0 -1 / +2 +295 -0 -0 / 2 295
* notice: removed / changed dates: [2024-04-04] / [2024-04-05 2024-04-18]

2024-04-18T16:13:27Z: