@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2024-04-19T16:13:50Z",
-  "count_outdated" : 198727,
-  "uniques_outdated" : 1998,
-  "count" : 200656,
+  "timestamp" : "2024-04-20T00:52:27Z",
+  "count_outdated" : 198778,
+  "uniques_outdated" : 1999,
+  "count" : 200748,
   "uniques" : 2020,
   "clones" : [
     {
-      "timestamp": "2024-04-05T00:00:00Z",
-      "count": 14,
-      "count_minmax": [ 14, 51 ],
-      "count_decinc": [ 37, 51 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
       "timestamp": "2024-04-06T00:00:00Z",
-      "count": 51,
-      "count_minmax": [ 51, 51 ],
-      "count_decinc": [ 0, 51 ],
+      "count": 50,
+      "count_minmax": [ 50, 51 ],
+      "count_decinc": [ 1, 51 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2024-04-19T00:00:00Z",
-      "count": 203,
-      "count_minmax": [ 110, 203 ],
-      "count_decinc": [ 0, 203 ],
+      "count": 295,
+      "count_minmax": [ 110, 295 ],
+      "count_decinc": [ 0, 295 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
