@@ -1,15 +1,10 @@
 {
-  "count": 1892,
+  "count": 1969,
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2024-04-05T00:00:00Z",
-      "count": 14,
-      "uniques": 1
-    },
-    {
       "timestamp": "2024-04-06T00:00:00Z",
-      "count": 51,
+      "count": 50,
       "uniques": 1
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2024-04-19T00:00:00Z",
-      "count": 203,
+      "count": 295,
       "uniques": 1
     }
   ]
